# xifetch-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: color.rs  config.rs  main.rs
